--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
+    "@prisma/client": "^4.10.1",
     "auth0": "^3.1.2",
     "next": "13.1.1",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1"
+    "eslint-config-next": "13.1.1",
+    "prisma": "^4.10.1"
   }
 }
